// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input does not contains only number 1`] = `
<Valle(Input)
  isNumeric={true}
  onInvalid={[Function]}
>
  <Input
    message="Hi does not contain only numbers. Please check your value and try again."
    valid={false}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div>
        Hi does not contain only numbers. Please check your value and try again.
      </div>
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input contains only number 1`] = `
<Valle(Input)
  isNumeric={true}
  onValid={[Function]}
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input is empty 1`] = `
<Valle(Input)
  isNumeric={true}
  onValid={[Function]}
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;
